--- a/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
@@ -10,19 +10,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- App favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="~/images/favicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css" type="text/css">
 
     <!--Material Icon -->
-    <link rel="stylesheet" type="text/css" href="css/materialdesignicons.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/materialdesignicons.min.css" />
 
     <!--pe-icon-7 Icon -->
-    <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/pe-icon-7-stroke.css" />
 
     <!-- Custom  css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
 
 </head>
 
@@ -71,8 +71,8 @@
             <div class="container-fluid">
                 <!-- LOGO -->
                 <a class="logo text-uppercase" href="index.html">
-                    <img src="images/logo-light.png" alt="" class="logo-light" height="20" />
-                    <img src="images/logo-dark.png" alt="" class="logo-dark" height="20" />
+                    <img src="~/images/logo-light.png" alt="" class="logo-light" height="20" />
+                    <img src="~/images/logo-dark.png" alt="" class="logo-dark" height="20" />
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,10 +104,10 @@
                                     Pages <i class="mdi mdi-chevron-down ml-1"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a class="dropdown-item" href="about.html">About</a>
-                                    <a class="dropdown-item" href="blog.html">Blog</a>
-                                    <a class="dropdown-item" href="blog-details.html">Blog Details</a>
-                                    <a class="dropdown-item" href="contact.html">Contact</a>
+                                    <a class="dropdown-item" href="@Url.Action("About", "Home")">About</a>
+                                    <a class="dropdown-item" href="@Url.Action("Blog", "Home")">Blog</a>
+                                    <a class="dropdown-item" href="@Url.Action("BlogDetails", "Home")">Blog Details</a>
+                                    <a class="dropdown-item" href="@Url.Action("Contact", "Home")">Contact</a>
                                 </div>
                             </div>
                         </li>
@@ -139,7 +139,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="home-img">
-                        <img src="images/home-img.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="~/images/home-img.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
             </div>
@@ -240,7 +240,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-5 col-sm-6">
                     <div>
-                        <img src="images/features/img-1.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="~/images/features/img-1.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-1">
@@ -305,7 +305,7 @@
 
                 <div class="col-lg-5 col-sm-6 offset-lg-1">
                     <div>
-                        <img src="images/features/img-2.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="~/images/features/img-2.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
 
@@ -484,7 +484,7 @@
 
                         <div class="p-4">
                             <div class="testi-img float-left mr-3">
-                                <img src="images/users/img-1.png" alt="" class="rounded-circle avatar-md">
+                                <img src="~/images/users/img-1.png" alt="" class="rounded-circle avatar-md">
                             </div>
                             <div>
                                 <h4 class="font-16 mb-1">James Barrett</h4>
@@ -501,7 +501,7 @@
 
                         <div class="p-4">
                             <div class="testi-img float-left mr-3">
-                                <img src="images/users/img-2.png" alt="" class="rounded-circle avatar-md">
+                                <img src="~/images/users/img-2.png" alt="" class="rounded-circle avatar-md">
                             </div>
                             <div>
                                 <h4 class="font-16 mb-1">Glenn Ziegler</h4>
@@ -518,7 +518,7 @@
 
                         <div class="p-4">
                             <div class="testi-img float-left mr-3">
-                                <img src="images/users/img-3.png" alt="" class="rounded-circle avatar-md">
+                                <img src="~/images/users/img-3.png" alt="" class="rounded-circle avatar-md">
                             </div>
                             <div>
                                 <h4 class="font-16 mb-1">Samuel Hicks</h4>
@@ -533,22 +533,22 @@
             <div class="row mt-4 pt-4">
                 <div class="col-lg-3 col-sm-6">
                     <div class="client-images">
-                        <img src="images/clients/1.png" alt="logo-img" class="mx-auto img-fluid d-block">
+                        <img src="/~images/clients/1.png" alt="logo-img" class="mx-auto img-fluid d-block">
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="client-images">
-                        <img src="images/clients/2.png" alt="logo-img" class="mx-auto img-fluid d-block">
+                        <img src="/~images/clients/2.png" alt="logo-img" class="mx-auto img-fluid d-block">
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="client-images">
-                        <img src="images/clients/3.png" alt="logo-img" class="mx-auto img-fluid d-block">
+                        <img src="~/images/clients/3.png" alt="logo-img" class="mx-auto img-fluid d-block">
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="client-images">
-                        <img src="images/clients/4.png" alt="logo-img" class="mx-auto img-fluid d-block">
+                        <img src="~/images/clients/4.png" alt="logo-img" class="mx-auto img-fluid d-block">
                     </div>
                 </div>
             </div>
@@ -574,7 +574,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5">
                     <div>
-                        <img src="images/faq-img.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="~/images/faq-img.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
 
@@ -701,7 +701,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="mb-3">
-                        <img src="images/logo-light.png" alt="" height="20">
+                        <img src="~/images/logo-light.png" alt="" height="20">
                     </div>
                     <p class="pt-1 text-white-50">Bootstrap 4 Landing Page Template</p>
                     <p class="text-white-50">If several languages coalesce the grammar of the resulting language </p>
@@ -770,16 +770,16 @@
     </footer>
     <!-- footer end -->
     <!-- javascript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrollspy.min.js"></script>
+    <script src="~/js/jquery.min.js"></script>
+    <script src="~/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/jquery.easing.min.js"></script>
+    <script src="~/js/scrollspy.min.js"></script>
 
     <!-- counter js -->
-    <script src="js/counter.init.js"></script>
+    <script src="~/js/counter.init.js"></script>
 
     <!-- custom js -->
-    <script src="js/app.js"></script>
+    <script src="~/js/app.js"></script>
 </body>
 
 </html>
