Changed Contact,Index,BlogDetails,Blog path for landing scripts

--- a/eUseControl.BeekeepingStore/Views/Home/BlogDetails.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/BlogDetails.cshtml
@@ -19,16 +19,16 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css" type="text/css">
 
     <!--Material Icon -->
-    <link rel="stylesheet" type="text/css" href="css/materialdesignicons.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/materialdesignicons.min.css" />
 
     <!--pe-icon-7 Icon -->
-    <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/pe-icon-7-stroke.css" />
 
     <!-- Custom  css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/style.css" />
 
 </head>
 
@@ -490,13 +490,13 @@
     </footer>
     <!-- footer end -->
     <!-- javascript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrollspy.min.js"></script>
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery.easing.min.js"></script>
+    <script src="~/Scripts/scrollspy.min.js"></script>
 
     <!-- custom js -->
-    <script src="js/app.js"></script>
+    <script src="~/Scripts/app.js"></script>
 </body>
 
 </html>
