--- a/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
@@ -1,10 +1,9 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 
 <head>
     <meta charset="utf-8" />
@@ -18,16 +17,16 @@
     <link rel="shortcut icon" href="~/images/favicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="~/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css" type="text/css">
 
     <!--Material Icon -->
-    <link rel="stylesheet" type="text/css" href="~/css/materialdesignicons.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/materialdesignicons.min.css" />
 
     <!--pe-icon-7 Icon -->
-    <link rel="stylesheet" type="text/css" href="~/css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/pe-icon-7-stroke.css" />
 
     <!-- Custom  css -->
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/style.css" />
 </head>
 
 <body>
@@ -45,13 +44,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Home")" class="nav-link">Home</a>
+                            <a href="@Url.Action("Index", "Home")" class="nav-link">Acasă</a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Products", "Home")" class="nav-link">Products</a>
+                            <a href="@Url.Action("Products", "Home")" class="nav-link">Produse</a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("About", "Home")" class="nav-link">About</a>
+                            <a href="@Url.Action("About", "Home")" class="nav-link">Despre</a>
                         </li>
                         <li class="nav-item">
                             <a href="@Url.Action("Contact", "Home")" class="nav-link">Contact</a>
@@ -70,11 +69,13 @@
     </div>
 
     <!-- javascript -->
-    <script src="~/js/jquery.min.js"></script>
-    <script src="~/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/jquery.easing.min.js"></script>
-    <script src="~/js/scrollspy.min.js"></script>
-    <script src="~/js/app.js"></script>
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery.easing.min.js"></script>
+    <script src="~/Scripts/scrollspy.min.js"></script>
+    <script src="~/Scripts/app.js"></script>
+    <script src="~/Scripts/vendor.min.js"></script>
+    <script src="~/Scripts/app.min.js"></script>
 </body>
 
 </html>
