--- a/eUseControl.BeekeepingStore/Content/scss/_variable.scss
+++ b/eUseControl.BeekeepingStore/Content/scss/_variable.scss
@@ -1,21 +1,19 @@
-
-
-$primary: #3bafda;
-$success:#1abc9c;
-$info:   #4fc6e1;
-$danger: #ee324d;
-$purple: #6658dd;
+$primary: #FFD700;
+$success: #FFB300;
+$info: #FF8F00;
+$danger: #FF6F00;
+$purple: #FFAB00;
 $pink: #f672a7;
 $white: #ffffff;
-$dark:  #323a46;
-$light:  #f9f9f9;
-$muted:  #7a7d84;
+$dark: #323a46;
+$light: #f9f9f9;
+$muted: #7a7d84;
 
 $lightdark: #e6e6e6;
 
-$font-base : 14px;
+$font-base: 14px;
 
-$bg-gradient : linear-gradient(360deg, #fff 0%, #3bafda 78%);
+$bg-gradient: linear-gradient(360deg, #fff 0%, #3bafda 78%);
 
 $shadow: 0 10px 35px 0 rgba(154, 161, 171, 0.1);
 
