--- a/eUseControl.BeekeepingStore/Views/Home/Blog.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Blog.cshtml
@@ -9,14 +9,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Minton - Responsive Admin Dashboard & Landing Page Template</title>
+    <title>Magazin Apicol - Magazinul tău pentru produse apicole</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
-    <meta content="Coderthemes" name="author" />
+    <meta content="Găsește toate produsele și echipamentele apicole la magazinul nostru. Produse de calitate și sfaturi de specialitate pentru apicultori de toate nivelurile." name="description" />
+    <meta content="TI-235" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- App favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="/Content/images/favicon.ico">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" type="text/css">
@@ -44,7 +44,7 @@
                         </li>
                         <li class="list-inline-item">
                             <a href="#">
-                                <i class="mdi mdi-email mr-1"></i> Support@mail.com
+                                <i class="mdi mdi-email mr-1"></i> Support@isa.utm.md
                             </a>
                         </li>
                     </ul>
@@ -77,8 +77,8 @@
             <div class="container-fluid">
                 <!-- LOGO -->
                 <a class="logo text-uppercase" href="index.html">
-                    <img src="images/logo-light.png" alt="" class="logo-light" height="20" />
-                    <img src="images/logo-dark.png" alt="" class="logo-dark" height="20" />
+                    <img src="Content/images/logo-light.png" alt="" class="logo-light" height="20" />
+                    <img src="Content/images/logo-dark.png" alt="" class="logo-dark" height="20" />
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,19 +87,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
                         <li class="nav-item active">
-                            <a href="index.html#home" class="nav-link">Home</a>
+                            <a href="index.html#home" class="nav-link">Acasă</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#services" class="nav-link">Services</a>
+                            <a href="index.html#services" class="nav-link">Produse</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#features" class="nav-link">Features</a>
+                            <a href="index.html#features" class="nav-link">Despre noi</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#pricing" class="nav-link">Pricing</a>
+                            <a href="index.html#pricing" class="nav-link">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#testimonial" class="nav-link">Testimonial</a>
+                            <a href="index.html#testimonial" class="nav-link">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a href="index.html#faq" class="nav-link">Faq</a>
