--- a/eUseControl.BeekeepingStore/Views/Home/Contact.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Contact.cshtml
@@ -1,8 +1,6 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- App favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="Content/images/favicon.ico">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/Content/bootstrap.min.css" type="text/css">
@@ -37,8 +35,8 @@
             <div class="container-fluid">
                 <!-- LOGO -->
                 <a class="logo text-uppercase" href="index.html">
-                    <img src="images/logo-light.png" alt="" class="logo-light" height="20" />
-                    <img src="images/logo-dark.png" alt="" class="logo-dark" height="20" />
+                    <img src="~/Content/images/logo-light.png" alt="" class="logo-light" height="20" />
+                    <img src="~/Content/images/logo-dark.png" alt="" class="logo-dark" height="20" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="mdi mdi-menu"></i>
@@ -46,13 +44,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
                         <li class="nav-item">
-                            <a href="index.html#home" class="nav-link">Home</a>
+                            <a href="index.html#home" class="nav-link">Acasă</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#products" class="nav-link">Products</a>
+                            <a href="index.html#products" class="nav-link">Produse</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#about" class="nav-link">About</a>
+                            <a href="index.html#about" class="nav-link">Despre noi</a>
                         </li>
                         <li class="nav-item active">
                             <a href="contact.html" class="nav-link">Contact</a>
