--- a/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
@@ -1,81 +1,49 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-<html lang="ro">
-
+﻿<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - Magazin Apicol</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Magazin Apicol - Produse apicole de calitate" name="description" />
-    <meta content="Coderthemes" name="author" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- App favicon -->
-    <link rel="shortcut icon" href="~/images/favicon.ico">
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css" type="text/css">
-
-    <!--Material Icon -->
-    <link rel="stylesheet" type="text/css" href="~/Content/materialdesignicons.min.css" />
-
-    <!--pe-icon-7 Icon -->
-    <link rel="stylesheet" type="text/css" href="~/Content/pe-icon-7-stroke.css" />
-
-    <!-- Custom  css -->
-    <link rel="stylesheet" type="text/css" href="~/Content/style.css" />
+    <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/Content/site.css" />
+    <script src="~/Scripts/modernizr-2.8.3.js"></script>
 </head>
-
 <body>
-    <header class="sticky">
-        <nav class="navbar navbar-expand-lg fixed-top navbar-custom" id="navbar">
-            <div class="container-fluid">
-                <!-- LOGO -->
-                <a class="logo text-uppercase" href="@Url.Action("Index", "Home")">
-                    <img src="~/images/logo-light.png" alt="" class="logo-light" height="20" />
-                    <img src="~/images/logo-dark.png" alt="" class="logo-dark" height="20" />
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="mdi mdi-menu"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
-                        <li class="nav-item">
-                            <a href="@Url.Action("Index", "Home")" class="nav-link">Acasă</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("Products", "Home")" class="nav-link">Produse</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("About", "Home")" class="nav-link">Despre</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("Contact", "Home")" class="nav-link">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("Login", "Home")" class="nav-link">Logare</a>
-                        </li>
-                    </ul>
-                </div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="@Url.Action("Index", "Home")">Beekeeping Store</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Home")">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Products", "Home")">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Blog", "Home")">Blog</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
-
-    <div class="container">
+    <div class="container body-content">
         @RenderBody()
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - TI-235</p>
+        </footer>
     </div>
-
-    <!-- javascript -->
-    <script src="~/Scripts/jquery.min.js"></script>
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-    <script src="~/Scripts/jquery.easing.min.js"></script>
-    <script src="~/Scripts/scrollspy.min.js"></script>
-    <script src="~/Scripts/app.js"></script>
-    <script src="~/Scripts/vendor.min.js"></script>
-    <script src="~/Scripts/app.min.js"></script>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/respond.js"></script>
 </body>
-
 </html>
