Adaugat noi lucruri la pagina principala

--- a/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
@@ -9,6 +9,44 @@
         <p>Your one-stop shop for all beekeeping supplies and equipment.</p>
     </div>
 
+    <div class="search-bar">
+        <input type="text" class="form-control" placeholder="Search...">
+    </div>
+
+    <div id="productCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/Content/Images/beekeeping-kit.jpg" class="d-block w-100" alt="Beekeeping Kit">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Beekeeping Kit</h5>
+                    <p>Everything you need to get started with beekeeping.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="~/Content/Images/protective-gear.jpg" class="d-block w-100" alt="Protective Gear">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Protective Gear</h5>
+                    <p>Stay safe while working with your bees.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="~/Content/Images/honey-extractor.jpg" class="d-block w-100" alt="Honey Extractor">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Honey Extractor</h5>
+                    <p>Tools and equipment for extracting honey.</p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#productCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#productCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
     <div class="row">
         <div class="col-md-4">
             <h2>Beekeeping Kits</h2>
@@ -21,6 +59,61 @@
         <div class="col-md-4">
             <h2>Honey Extraction</h2>
             <p>Tools and equipment for extracting honey.</p>
+        </div>
+    </div>
+
+    <div class="blog-section">
+        <h2>Latest Blog Posts</h2>
+        <div class="blog-post">
+            <h3>How to Start Beekeeping</h3>
+            <p>Learn the basics of beekeeping and get started with your own hive.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Top 10 Tips for Beekeepers</h3>
+            <p>Discover essential tips and tricks for successful beekeeping.</p>
+        </div>
+        <div class="blog-post">
+            <h3>The Benefits of Beekeeping</h3>
+            <p>Explore the many benefits of beekeeping for you and the environment.</p>
+        </div>
+    </div>
+
+    <div class="testimonials-section">
+        <h2>Customer Testimonials</h2>
+        <div class="testimonial">
+            <p>"Great products and excellent customer service!" - John D.</p>
+        </div>
+        <div class="testimonial">
+            <p>"I love the beekeeping kit I purchased. Highly recommend!" - Sarah W.</p>
+        </div>
+        <div class="testimonial">
+            <p>"Fast shipping and quality products. Will buy again!" - Michael T.</p>
+        </div>
+    </div>
+
+    <div class="newsletter-section">
+        <h2>Subscribe to Our Newsletter</h2>
+        <form>
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="Enter your email">
+            </div>
+            <button type="submit" class="btn btn-primary">Subscribe</button>
+        </form>
+    </div>
+
+    <div class="special-offers-section">
+        <h2>Special Offers and Promotions</h2>
+        <div class="offer">
+            <h3>10% Off Beekeeping Kits</h3>
+            <p>Get 10% off all beekeeping kits for a limited time.</p>
+        </div>
+        <div class="offer">
+            <h3>Free Shipping on Orders Over $50</h3>
+            <p>Enjoy free shipping on all orders over $50.</p>
+        </div>
+        <div class="offer">
+            <h3>Buy One, Get One Free on Protective Gear</h3>
+            <p>Buy one protective gear item and get another one free.</p>
         </div>
     </div>
 </div>
