--- a/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Blog", "Home")">Blog</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#search-bar">Search</a>
+                    </li>
                 </ul>
             </div>
         </nav>
