login si register

--- a/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Home/Index.cshtml
@@ -116,4 +116,9 @@
             <p>Buy one protective gear item and get another one free.</p>
         </div>
     </div>
+
+    <div class="auth-buttons">
+        <a href="Login" class="btn btn-primary">Login</a>
+        <a href="@Url.Action("Register", "Home")" class="btn btn-secondary">Register</a>
+    </div>
 </div>
