--- a/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#search-bar">Search</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Login", "Home")">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Register", "Home")">Register</a>
+                    </li>
                 </ul>
             </div>
         </nav>
