--- a/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
@@ -1,12 +1,13 @@
-﻿﻿
+﻿@using System.Web.Optimization
 ﻿
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/Content/site.css" />
+
+    @Styles.Render("~/Content/css")
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
 </head>
@@ -56,7 +57,8 @@
         </footer>
     </div>
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/respond.js"></script>
 </body>
 </html>
